2016-02-05 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCast.c
	  Fix a bug in comparason operaion.
	* support/regression/tests/memory.c
	  Enable more tests.

2016-02-04 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCicode.c
	  Allow array members of structs can be accessed in pointer form.
	* support/regression/tests/bug-2468.c
	  Add a test case.

2016-02-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp:
	  Fix compare operator, patch #267 by Peter Dons Tychsen.
	* device/lib/pic16/libsdcc/char/divschar.c,
	  device/lib/pic16/libsdcc/char/modschar.c:
	  Fix signedness of pci16 char support routines.

2016-02-01 Ben Shi <powerstudio1st AT 163 DOT com>
 
	* src/SDCCast.c
	  Try to find a common type for the left and right in '?:' .
	* support/regression/tests/bug-2461.c
	  Add a new test case.

2016-02-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCglobl.h,
	  src/SDCCmain.c,
	  src/SDCCsymt.c,
	  src/SDCCval.c,
	  doc/sdccman.lyx:
	  Make char unsigned by default.

2016-02-01 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/stdlib.h:
	  Fix declaration of aligned_alloc() for C11.

2016-02-01 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCC.y
	  Fix a bug: type mismatch between function definition and declaration.
	* support/regression/tests/bug-2419.c
	  Add a new test case.

2016-01-31 Molnar Karoly <molnarkaroly AT users.sf.net>

	* src/pic14/device.c,
	  src/pic14/gen.c,
	  src/pic14/glue.c,
	  src/pic14/pcode.c,
	  src/pic14/pcodepeep.c,
	  src/pic14/ralloc.c,
	  src/pic16/device.c,
	  src/pic16/device.h,
	  src/pic16/gen.c,
	  src/pic16/genarith.c,
	  src/pic16/genutils.c,
	  src/pic16/glue.c,
	  src/pic16/glue.h,
	  src/pic16/graph.c,
	  src/pic16/main.c,
	  src/pic16/pcode.c,
	  src/pic16/pcode.h,
	  src/pic16/pcodepeep.c,
	  src/pic16/ralloc.c,
	  src/pic16/ralloc.h:
	  Use "Safe_alloc(...)" instead of "Safe_calloc(1, ...)".
	  Use SNPRINTF(X, sizeof(X), ...) instead of sprintf(X, ...).